Ajustement du résultat Word ; ajout page de garde

--- a/01-abstract.Rmd
+++ b/01-abstract.Rmd
@@ -1,1 +1,10 @@
-# Abstract
+# Résumé
+
+\newpage
+
+```{r, eval = !knitr::is_html_output(), echo= F}
+cat("Table des matières")
+block_toc(level = 2)
+```
+
+\newpage
