--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,7 @@
 ---
-title: "L'initiation et le suivi du traitement hormonal d'affirmation de genre en médecine générale : résultats d'une étude de cohorte et recommandations pour la pratique clinique"
+title: "L'initiation et le suivi du traitement hormonal d'affirmation de genre en médecine générale"
+subtitle: |
+  | Analyse mixte d'une cohorte de patient·e·s et recommandations pour la pratique clinique
 author: "Dr. Maxence Ouafik"
 link-citations: true
 csl: ["vancouver.csl"]
@@ -14,8 +16,6 @@ library(officedown)
 library(officer)
 ```
 
-# Avant-propos {#avantpropos}
+# Remerciements {#remerciements}
 
-[![](files/flag.jpg){width="361"}](https://www.freepik.com/vectors/lgbt-flag)
-
-## Remerciements {#remerciements}
+\newpage
