--- a/08-appendix.Rmd
+++ b/08-appendix.Rmd
@@ -1,6 +1,6 @@
-# Annexes
+# (PART) Annexes
 
-## Guide de codage des données subjectives {#codage}
+# Guide de codage des données subjectives {#guide-de-codage-des-données-subjectives}
 
 Afin d'extraire les données subjectives des notes médicales, un guide d'extraction et de codages des variables a été développé au préalable. Ce guide a ensuite été testé et affiné jusqu'à sa version définitive ayant permis la réalisation de ce TFE.
 
@@ -12,23 +12,23 @@ Les données collectées correspondent aux thématiques abordées lors de l'anam
 
 3.  Les aspects chirurgicaux
 
-### Aspects sociaux {#codage_social}
+## Aspects sociaux {#aspects-sociaux}
 
-#### Famille {#codage_social_famille}
+### Famille
 
 -   *Personnes au courant :* personne (0) ; mère seulement (1) ; père seulement (2) ; les deux parents ou le seul parent en vie (3) ; les parents et la majorité de la famille (4) ; quelques membres de la famille mais pas les parents (5) ; toute la famille (6)
 
 -   *Réaction initiale :* réaction négative (0) ; quelques difficultés (1) ; réaction neutre (2) ; réaction globalement positive (3)
 
-#### Amis {#codage_social_amis}
+### Amis
 
 -   *Personnes au courant :* personne (0) ; uniquement les amis proches (1) ; la plupart des amis (2) ; tous ou presque (3)
 
 -   *Réaction initiale :* réaction hostile (0) ; quelques difficultés (1) ; réaction neutre (2) ; réaction globalement positive (3)
 
-### Aspects hormonaux
+## Aspects hormonaux {#aspects-hormonaux}
 
-#### Effets les plus attendus {#codage_hormones_effets}
+### Effets les plus attendus
 
 Variables binaires codée (1) si l'effet a été mentionné explicitement comme une priorité pour le point de confort du/de la patient(e) et (0) dans le cas contraire. Chaque variable correspond à un des effets principaux du THAG soit :
 
@@ -36,15 +36,15 @@ Variables binaires codée (1) si l'effet a été mentionné explicitement comme 
 
 -   Pour les hommes transgenres et autres personnes transmasculines, l'aggravation de la voix, l'aménorrhée, la majoration de la pilosité, la répartition plus masculine des graisses, le développement de la musculature, et le développement d'un dickclit.
 
-#### Inquiétudes vis-à-vis du traitement
+### Inquiétudes vis-à-vis du traitement
 
 Variables binaires codées (1) si cet effet inquiète le patient ou (0) dans le cas contraire.
 
-#### Cryopréservation des gamètes
+### Cryopréservation des gamètes
 
 Variable correspondant à la réalisation d'une cryopréservation des gamètes avant l'introduction du THAG : non-réalisée (0) démarches effectuées (1)
 
-### Aspects chirurgicaux
+## Aspects chirurgicaux {#aspects-chirurgicaux}
 
 Pour chaque chirurgie couramment envisagée : n'a pas exprimé de réaliser l'opération (0) ; ne sait pas (1) ; besoin identifié (2).
 
