--- a/04-results.Rmd
+++ b/04-results.Rmd
@@ -1,8 +1,42 @@
 # Résultats
 
+```{r load_packages, include=FALSE}
+library(dplyr)
+library(flextable)
+
+```
+
 ```{r import_data, message=FALSE, warning=FALSE, include=FALSE}
 
 source('scripts/import_data.R')
+library(scales)
+```
+
+## Participant·e·s
+
+### Éligibilité
+
+Parmi les 71 patient·e·s que j'ai déjà vu·e·s au moins une fois en consultation dans le but d'initier ou de suivre un THAG, 24 avaient déjà un traitement en place, instauré par une autre personne que moi. À noter que 3 patient·e·s avaient commencé leur traitement sans supervision médicale, que ce soit en les achetant ailleurs qu'en pharmacie ou en les partageant avec des personnes prenant déjà un THAG. En outre, 10 patient·e·s n'avaient pas encore entamé leur THAG au moment où s'est achevée l'étape de sélection des participant·e·s. Enfin, 11 patient·e·s avaient entamé un THAG mais n'avaient pas encore bénéficié d'une prise de sang de contrôle à 3 mois et n'avaient donc qu'un unique point de données. 25 des 26 patient·e·s éligibles ont répondu positivement pour que leurs données soient utilisées dans le cadre de ce TFE. La figure \@ref(fig:flowchart) donne une représentation graphique de ce processus de sélection.
+
+```{r flowchart, fig.align='center', fig.cap= 'Diagramme de flux présentant la sélection des patient·e·s pour le TFE', echo=FALSE, out.width = '800px'}
+
+knitr::include_graphics('files/sample_flowchart.png', dpi = 72)
+```
+
+### Caractéristiques démographiques
+
+L'âge des participants variait entre `r min(obj_demog_data$age)` et `r max(obj_demog_data$age)` ans (moyenne : `r round(mean(obj_demog_data$age))` ans). L'échantillon se composait de `r sum(obj_demog_data$genre == "F")` femmes transgenres, `r sum(obj_demog_data$genre == "M")` hommes transgenres, `r sum(obj_demog_data$genre == "NB" & obj_demog_data$sexe == 'F')` personnes non-binaires transmasculines, et `r sum(obj_demog_data$genre == "NB" & obj_demog_data$sexe == 'M')` personne non-binaire transféminine. `r percent(sum(obj_demog_data$province == 'Liege')/nrow(obj_demog_data))` des participant·e·s vivaient dans la Province de Liège. Au niveau du statut mutuelle, `r sum(obj_demog_data$mutuelle == 'BIM')` participant·e·s étaient BIM (soit `r percent(sum(obj_demog_data$mutuelle == 'BIM')/nrow(obj_demog_data))` ) et `r sum(obj_demog_data$mutuelle == "Non-inscrit")` n'étaient pas en ordre de mutuelle. Enfin, au niveau administratif, `r percent((sum(obj_demog_data$adm_pren == '1')+sum(obj_demog_data$adm_pren == '2'))/nrow(obj_demog_data))` des participant·e·s avaient modifié leur prénom à l'état-civil et `r percent((sum(obj_demog_data$adm_cec == '1')+sum(obj_demog_data$adm_cec == '2'))/nrow(obj_demog_data))` avaient modifié leur marqueur de genre. Toutes ces caractéristiques démographiques sont résumées dans le tableau \@ref(tab:DemogTab).
+
+\newpage
+
+```{r demog_table_html, echo=FALSE, warning=FALSE, message=FALSE, tab.id = "DemogTab", eval = knitr::is_html_output()}
+source('scripts/demog_table.R', encoding = 'UTF-8')
+.demog_ft
+```
+
+```{r demog_table_word, echo=FALSE, warning=FALSE, message=FALSE, tab.id = "DemogTab", eval = !knitr::is_html_output()}
+source('scripts/demog_table.R', encoding = 'UTF-8')
+.demog_ft_word
 ```
 
 \newpage
