--- a/index.Rmd
+++ b/index.Rmd
@@ -13,7 +13,7 @@ rmd_files: ("index.Rmd", "01-abstract.Rmd", "02-introduction.Rmd", "03-methodolo
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(c(echo = FALSE, warning = FALSE))
 library(bookdown)
 library(officedown)
 library(officer)
