--- a/index.Rmd
+++ b/index.Rmd
@@ -17,6 +17,8 @@ knitr::opts_chunk$set(c(echo = FALSE, warning = FALSE))
 library(bookdown)
 library(officedown)
 library(officer)
+library(extrafont)
+loadfonts(device = "win")
 ```
 
 # (PART) Avant-propos {.unnumbered}
