--- a/04-results.Rmd
+++ b/04-results.Rmd
@@ -10,7 +10,7 @@ requireNamespace('scales')
 
 ### Éligibilité
 
-Parmi les 71 patient·e·s que j'ai déjà vu·e·s au moins une fois en consultation dans le but d'initier ou de suivre un THAG, 24 avaient déjà un traitement en place, instauré par une autre personne que moi. À noter que 3 patient·e·s avaient commencé leur traitement sans supervision médicale, que ce soit en les achetant ailleurs qu'en pharmacie ou en les partageant avec des personnes prenant déjà un THAG. En outre, 10 patient·e·s n'avaient pas encore entamé leur THAG au moment où s'est achevée l'étape de sélection des participant·e·s. Enfin, 11 patient·e·s avaient entamé un THAG mais n'avaient pas encore bénéficié d'une prise de sang de contrôle à 3 mois et n'avaient donc qu'un unique point de données. 25 des 26 patient·e·s éligibles ont répondu positivement pour que leurs données soient utilisées dans le cadre de ce TFE. La figure \@ref(fig:flowchart) donne une représentation graphique de ce processus de sélection.
+Parmi les 71 patient·e·s que j'ai déjà vu·e·s au moins une fois en consultation dans le but d'initier ou de suivre un THAG, 24 avaient déjà un traitement en place, instauré par une autre personne que moi. À noter que 3 patient·e·s avaient commencé leur traitement sans supervision médicale, que ce soit en les achetant ailleurs qu'en pharmacie ou en les partageant avec des personnes prenant déjà un THAG. En outre, 10 patient·e·s n'avaient pas encore entamé leur THAG au moment où s'est achevée l'étape de sélection des participant·e·s. Enfin, 10 patient·e·s avaient entamé un THAG mais n'avaient pas encore bénéficié d'une prise de sang de contrôle à 3 mois et n'avaient donc qu'un unique point de données. 26 des 27 patient·e·s éligibles ont répondu positivement pour que leurs données soient utilisées dans le cadre de ce TFE. La figure \@ref(fig:flowchart) donne une représentation graphique de ce processus de sélection.
 
 ```{r flowchart, fig.align='center', fig.cap= 'Diagramme de flux présentant la sélection des patient·e·s pour le TFE', echo=FALSE, out.width = '800px'}
 
@@ -19,11 +19,11 @@ knitr::include_graphics('files/sample_flowchart.png', dpi = 72)
 
 ### Caractéristiques démographiques
 
-L'âge des participants variait entre `r min(obj_demog_data$age)` et `r max(obj_demog_data$age)` ans (âge médian : `r round(median(obj_demog_data$age))` ans). L'échantillon se composait de `r sum(obj_demog_data$genre == "F")` femmes transgenres, `r sum(obj_demog_data$genre == "M")` hommes transgenres, `r sum(obj_demog_data$genre == "NB" & obj_demog_data$sexe == 'F')` personnes non-binaires transmasculines, et `r sum(obj_demog_data$genre == "NB" & obj_demog_data$sexe == 'M')` personne non-binaire transféminine. `r scales::percent(sum(obj_demog_data$province == 'Liege')/nrow(obj_demog_data))` des participant·e·s vivaient dans la Province de Liège. Au niveau du statut mutuelle, `r sum(obj_demog_data$mutuelle == 'BIM')` participant·e·s étaient BIM (soit `r scales::percent(sum(obj_demog_data$mutuelle == 'BIM')/nrow(obj_demog_data))` ) et `r sum(obj_demog_data$mutuelle == "Non-inscrit")` n'étaient pas en ordre de mutuelle. Enfin, au niveau administratif, `r scales::percent((sum(obj_demog_data$adm_pren == '1')+sum(obj_demog_data$adm_pren == '2'))/nrow(obj_demog_data))` des participant·e·s avaient modifié leur prénom à l'état-civil et `r scales::percent((sum(obj_demog_data$adm_cec == '1')+sum(obj_demog_data$adm_cec == '2'))/nrow(obj_demog_data))` avaient modifié leur marqueur de genre. Toutes ces caractéristiques démographiques sont résumées dans le tableau \@ref(tab:DemogTab).
+L'âge des participant·e·s variait entre `r min(obj_demog_data$age)` et `r max(obj_demog_data$age)` ans (âge médian : `r round(median(obj_demog_data$age))` ans). L'échantillon se composait de `r sum(obj_demog_data$genre == "F")` femmes transgenres, `r sum(obj_demog_data$genre == "M")` hommes transgenres, `r sum(obj_demog_data$genre == "NB" & obj_demog_data$sexe == 'F')` personnes non-binaires transmasculines, et `r sum(obj_demog_data$genre == "NB" & obj_demog_data$sexe == 'M')` personne non-binaire transféminine. `r scales::percent(sum(obj_demog_data$province == 'Liege')/nrow(obj_demog_data))` des participant·e·s vivaient dans la Province de Liège. Au niveau du statut mutuelle, `r sum(obj_demog_data$mutuelle == 'BIM')` participant·e·s étaient BIM (soit `r scales::percent(sum(obj_demog_data$mutuelle == 'BIM')/nrow(obj_demog_data))` ) et `r sum(obj_demog_data$mutuelle == "Non-inscrit")` n'étaient pas en ordre de mutuelle. Enfin, au niveau administratif, `r scales::percent((sum(obj_demog_data$adm_pren == '1')+sum(obj_demog_data$adm_pren == '2'))/nrow(obj_demog_data))` des participant·e·s avaient modifié leur prénom à l'état-civil et `r scales::percent((sum(obj_demog_data$adm_cec == '1')+sum(obj_demog_data$adm_cec == '2'))/nrow(obj_demog_data))` avaient modifié leur marqueur de genre. Toutes ces caractéristiques démographiques sont résumées dans le tableau \@ref(tab:DemogTab).
 
 ```{r demog_table, include=FALSE}
 
-source('scripts/demog_table.R', encoding = 'UTF-8')
+source('scripts/tables/demog_table.R', encoding = 'UTF-8')
 ```
 
 ```{r demog_table_html, echo=FALSE, warning=FALSE, message=FALSE, tab.id = "DemogTab", out.width = '100%', eval = knitr::is_html_output()}
@@ -40,21 +40,21 @@ Pour le reste des résultats de ce TFE, les hommes transgenres et personnes non-
 ### Problèmes de santé
 
 ```{r ant_data_manipulation, include=FALSE}
-source('scripts/ant_data_manipulation.R', encoding = 'UTF-8')
+source('scripts/data_manipulation/ant_data_manipulation.R', encoding = 'UTF-8')
 ```
 
-Les problèmes de santé les plus représentés dans l'échantillon étaient des problèmes de santé mentale, avec `r .N_dep` patient·e·s présentant un trouble dépressif majeur (soit `r .p_dep` de l'échantillon), `r .N_anx` patient présentant un trouble anxieux et `r .N_alc` patiente présentant un mésusage d'alcool. Les autres problèmes de santé retrouvés dans l'échantillon n'étaient présents qu'une fois : anémie ferriprive, asthme, BPCO, eczéma, syndrome de Fanconi, syndrome des ovaires micropolykystiques, rhinite chronique, et thrombophilie. En outre, `r .N_TSA_F` patientes se situaient sur le spectre autistique.
+Les problèmes de santé les plus représentés dans l'échantillon étaient des problèmes de santé mentale, avec `r .N_dep` patient·e·s présentant un trouble dépressif majeur (soit `r .p_dep` de l'échantillon), `r .N_anx` patient présentant un trouble anxieux et `r .N_alc` patient·e présentant un mésusage d'alcool. Les autres problèmes de santé retrouvés dans l'échantillon n'étaient présents qu'une fois : anémie ferriprive, asthme, BPCO, eczéma, syndrome de Fanconi, syndrome des ovaires micropolykystiques, rhinite chronique, et thrombophilie. En outre, `r .N_TSA_F` patientes se situaient sur le spectre autistique.
 
 ### Durée du suivi
 
 ```{r followup, include = FALSE}
-source('scripts/create_long_data.R', encoding = 'UTF-8')
-source('scripts/create_follow_up_plot.R', encoding = 'UTF-8')
+source('scripts/data_manipulation/create_long_data.R', encoding = 'UTF-8')
+source('scripts/plots/create_follow_up_plot.R', encoding = 'UTF-8')
 ```
 
-Les participants·e·s de l'étude ont été suivis entre `r min(.followup_time$followup)` et `r max(.followup_time$followup)` jours avec une durée médiane de `r median(.followup_time$followup)` jours. En termes de consultation de suivi, `r nrow(.followup_time)` patient·e·s ont été suivi·e·s au moins jusqu'à la première consultation trimestrielle (T1), `r sum(.followup_time$followup > 100)` patient·e·s, jusqu'à la deuxième (T2), `r sum(.followup_time$followup > 229)`, jusqu'à la troisième (T3), et `r sum(.followup_time$followup > 300)`, jusqu'à la quatrième (T4). Un·e seul·e patient·e a été perdu·e de vue, suite à sa décision d'interrompre le THAG. Comme le montre la figure \@ref(fig:FollowPlot), la répartition par genres reste globalement équilibrée. On constate davantage de personnes transféminines jusqu'à T3 inclus. Cela est dû au fait que j'avais un peu plus de patient·e·s transmasculin·e·s quand j'ai commencé à faire des suivis hormonaux, ce qui fut vite contrebalancé.
+Les participants·e·s de l'étude ont été suivis entre `r min(.followup_time$followup)` et `r max(.followup_time$followup)` jours avec une durée médiane de `r round(median(.followup_time$followup))` jours. `r sum(.followup$N[.followup$time_classe == '3 mois'])` patient·e·s ont été suivi·e·s durant trois mois, `r sum(.followup$N[.followup$time_classe == '6 mois'])` patient·e·s, durant six mois `r sum(.followup$N[.followup$time_classe == '9 mois'])`, durant neuf mois, et `r sum(.followup$N[.followup$time_classe == '12 mois'])`, durant douze mois ou plus. Un·e seul·e patient·e a été perdu·e de vue, suite à sa décision d'interrompre le THAG. La figure \@ref(fig:FollowPlot) représente la durée du suivi, par genres.
 
-```{r FollowPlot, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Nombre de patient·e·s par consultation trimestrielle et par genre", fig.dim=c(10,8), out.width = '100%', eval = knitr::is_html_output()}
+```{r FollowPlot, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Durée du suivi, par genres", fig.dim=c(10,8), out.width = '100%', eval = knitr::is_html_output()}
 
 .anim_followup_plot
 ```
@@ -69,13 +69,13 @@ knitr::include_graphics('output/plots/followup_plot.png')
 ### Contexte social
 
 ```{r fam_plot, include=FALSE}
-source('scripts/create_fam_plot.R', encoding = 'UTF-8')
-source('scripts/create_amis_plot.R', encoding = 'UTF-8')
+source('scripts/plots/create_fam_plot.R', encoding = 'UTF-8')
+source('scripts/plots/create_amis_plot.R', encoding = 'UTF-8')
 ```
 
 Une des questions que je pose à l'anamnèse de la première consultation est de savoir si un *coming out* a été fait et, si oui, auprès de quelles personnes et avec quelles réactions. L'objectif de cette question est d'évaluer le degré de soutien social dans le processus de transition. La figure \@ref(fig:FamPlot) montre une représentation graphique du coming out familial des patient·e·s de l'échantillon. Les patient·s· transmasculin·e·s de l'échantillon avaient tous au moins fait leur coming out à leurs deux parents tandis que `r .N_transfem_conceal` patient·e·s transféminines sur `r .N_transfem` n'avaient fait leur coming out qu'à une partie de leur famille, voire à personne pour l'une d'entre elles. A noter que l'information étaient absente du dossier pour `r sum(is.na(subj_soc_data$fam_pers))` patient·e·s transmasculin·e·s.
 
-Parmi les patient·e·s ayant fait un coming out à leur famille, `r .p_reac_neg` n'ont pas eu une réaction positive de cette dernière.
+Parmi les patient·e·s ayant fait un coming out à leur famille, `r .p_reac_diff` ont vécu quelques difficultés dans les relations familiales par la suite dont `r .p_reac_neg` qui ont dû faire face à une réaction négative voire hostile.
 
 ```{r FamPlot, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Membres de la famille auxquel·le·s les participant·e·s ont annoncé leur transidentité, par genre", fig.dim=c(10,8), out.width = '100%', eval = knitr::is_html_output()}
 
@@ -102,12 +102,12 @@ knitr::include_graphics('output/plots/amis_plot.png')
 ### Attentes vis-à-vis du THAG
 
 ```{r subj_horm_data, include= FALSE}
-source('scripts/manipulate_subj_horm_data.R', encoding = 'UTF-8')
+source('scripts/data_manipulation/manipulate_subj_horm_data.R', encoding = 'UTF-8')
 ```
 
 Afin de mieux cerner les attentes des patient·e·s et de leur proposer un traitement le plus adapté à ces dernières, je leur demande ensuite s'iels connaissent les effets du THAG et, si oui, s'iels identifient des effets particulièrement importants pour leur point de confort actuel.
 
-Pour les personnes transféminines, les effets les plus souvent mentionnés comme prioritaires étaient : une majoration de la poitrine ( `r .p_prio_poit` des patientes), une répartition plus féminine des graisses (`r .p_prio_gras_F`), une diminution de la pilosité (`r .p_prio_pilo_F`), et un arrêt de la progression de l'alopécie androgénique (`r .p_prio_alo`). Un·e patient·e avait mentionné l'adoucissement de la peau tandis qu'aucun·e patient·e n'avait explicitement évoqué la diminution des érections spontanées ou la diminution de la masse musculaire comme étant une priorité.
+Pour les personnes transféminines, les effets les plus souvent mentionnés comme prioritaires étaient : une majoration de la poitrine (`r .p_prio_poit` des patientes), une répartition plus féminine des graisses (`r .p_prio_gras_F`), une diminution de la pilosité (`r .p_prio_pilo_F`), et un arrêt de la progression de l'alopécie androgénique (`r .p_prio_alo`). Un·e patient·e avait mentionné l'adoucissement de la peau tandis qu'aucun·e patient·e n'avait explicitement évoqué la diminution des érections spontanées ou la diminution de la masse musculaire comme étant une priorité.
 
 Pour les personnes transmasculines, l'aggravation de la voix était l'effet le plus souvent recherché. Il s'agissait d'une priorité pour `r .p_prio_voix` des patient·e·s. Une répartition plus masculine des graisses et une majoration de la musculature étaient une priorité pour `r .p_prio_gras_M` des patient·e·s. `r .p_prio_pilo_M` des patient·e·s considéraient la majoration de leur pilosité comme une priorité tandis qu'un·e des patient·e·s avait mentionné l'accroissement du dickclit. Aucun·e n'avait cité l'aménorrhée comme étant sa priorité à l'initiation du THAG.
 
@@ -118,10 +118,10 @@ Vu les impacts du THAG sur la fertilité mentionnés dans l'introduction, je dem
 ### Besoins chirurgicaux
 
 ```{r chir_data, include=FALSE}
-source('scripts/manipulate_subj_chir_data.R', encoding = 'UTF-8')
+source('scripts/data_manipulation/manipulate_subj_chir_data.R', encoding = 'UTF-8')
 ```
 
-Toujours dans le but d'appréhender au mieux les besoins des patient·e·s, de les informer au mieux, et de les référer vers les spécialistes adéquat·e·s, je leur ai demandé s'iels identifient déjà à ce stade des chirurgies nécessaires pour les rapprocher de leurs points de confort.
+Toujours dans l'optique d'appréhender au mieux le point de confort des patient·e·s, l'anamnèse de la première consultation recouvre aussi des questions inhérentes aux besoins en termes d'intervention chirurgicale.
 
 Pour les patientes transféminines, la chirurgie la plus souvent identifiée comme nécessaire était la vaginoplastie (`r .p_vag2` des patient·e·s), suivie par les FFS (`r .p_ffs2`). Une patiente avait mentionné l'augmentation mammaire et aucun·e n'avait considéré les chirurgies vocales. En plus des patient·e·s ayant déjà une idée précise des chirurgies qui leur semblent nécessaires, `r .N_ffs1` patient·e·s hésitaient sur la FFS et une, sur la vaginoplastie. Dans l'ensemble, en ne comptant pas les patient·e·s qui hésitaient, `r .N_chir0` patient·e·s n'envisageaient aucune chirurgie, `r .N_chir1` patient·e·s en envisageaient une et `r .N_chir2` en envisageait deux.
 
