--- a/index.Rmd
+++ b/index.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(c(echo = FALSE, warning = FALSE))
 library(bookdown)
 library(officedown)
 library(extrafont)
-loadfonts(device = "win")
+loadfonts(device = 'all')
 ```
 
 # (PART) Avant-propos {.unnumbered}
